<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <SeekBar
        android:id="@+id/freq"
        style="@android:style/Widget.DeviceDefault.Light.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:verticalScrollbarPosition="right"
        app:layout_constraintBottom_toTopOf="@+id/accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextNumber"
        style="@style/Widget.Design.TextInputEditText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:allowUndo="false"
        android:autofillHints=""
        android:contextClickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:inputType="number"
        android:text="@string/check"
        android:textAlignment="center"
        android:textSize="95sp"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/count1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="50sp"
        android:text="@string/count"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/cou"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/freq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/count2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/count"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/tap"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:text="@string/tap" />

        <ToggleButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:textOff="@string/start"
            android:textOn="@string/stop"

            />
    </LinearLayout>

    <ToggleButton
        android:id="@+id/accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/On"
        android:textOff="@string/Off"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="170dp"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toTopOf="@+id/freq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber">

        <Button
            android:id="@+id/bn1p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/plus1"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/bn5p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/plus5" />

        <Button
            android:id="@+id/bn10p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/plus10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="170dp"
        android:orientation="vertical"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toTopOf="@+id/freq"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber">

        <Button
            android:id="@+id/bn1m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/minus1" />

        <Button
            android:id="@+id/bn5m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/minus5" />

        <Button
            android:id="@+id/bn10m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/minus10" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="385dp"
        android:layout_height="23dp"
        app:layout_constraintBottom_toTopOf="@+id/freq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/saveLIB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saveL"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/saveLIST"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saveR"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>